charts/kleff/virtual-services/microservices-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: kleff-deployment
spec:
  hosts:
  - "kleff.io"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: kleff-frontend
        port:
          number: 80 

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices-vs
  namespace: kleff-deployment
spec:
  hosts:
  - "api.kleff.io"
  gateways:
  - istio-system/main-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/users
    route:
    - destination:
        host: user-service
        port:
          number: 80

  - match:
    - uri:
        prefix: /api/v1/projects
    route:
    - destination:
        host: project-management-service
        port:
          number: 80

  - match:
    - uri:
        prefix: /api/v1/containers
    route:
    - destination:
        host: deployment-service
        port:
          number: 80
  
  - match:
    - uri:
        prefix: /api/v1/build
    route:
    - destination:
        host: deployment-backend-service
        port:
          number: 80
